@@ -1,3 +1,9 @@
+2019-03-06  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/ptr_traits.h [C++20] (pointer_traits<T*>::pointer_to):
+	Add constexpr.
+	* testsuite/20_util/pointer_traits/pointer_to_constexpr.cc: New test.
+
 2019-03-05  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/c_compatibility/math.h [C++20] (lerp): Add using
